[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
csv = "1.2"
dashmap = "6.1.0"
duplicate = "2.0.0"
sailfish = "0.9.0"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
